fixed : Bug #3937  	fails to compile with both gcc 3.3.3/icc8 Bug #4728  	mysql couldn't be compiled using system readline (readline-4.3)