client/mysql.cc
@@ -84,6 +84,7 @@ extern "C" {
 #if defined( __WIN__) || defined(OS2)
 #include <conio.h>
 #elif !defined(__NETWARE__)
+#undef __P // readline-4.2 declares own __P
 #include <readline/readline.h>
 #define HAVE_READLINE
 #endif
@@ -294,7 +295,7 @@ static const char *server_default_groups[]=
  HIST_ENTRY is defined for libedit, but not for the real readline
  Need to redefine it for real readline to find it
 */
-#if !defined(USE_LIBEDIT_INTERFACE)
+#if !defined(HAVE_HIST_ENTRY)
 typedef struct _hist_entry {
   const char      *line;
   const char      *data;
